--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -140,13 +140,13 @@
 				    	</div>	
 				    	<div class="col-md-4 col-12">
 				    		<div class="card mb-4 position-relative">
-				    			<img src="images/card-6.jpg">
+				    			<img src="images/chat-bot-bg.jpg">
 				    			<div class="card_content position-absolute">
-					    				<p class="card-text fs16">I created a Website for Food Lovers. Here you can find variety of food products that you love and the information on the same.</p>
-					    				<a href="https://rohitkotian27.github.io/FoodYouLove" target="_blank" alias="FoodYouLove" class="btn btn-block">View Now</a>
+					    				<p class="card-text fs16">I created an Interactive Chat Bot using Javascript frameworks. Work Faster & Smarter With Automated Chat Bots.</p>
+					    				<a href="https://rohitkotian27.github.io/Chat-Bot" target="_blank" alias="Chat-Bot" class="btn btn-block">View Now</a>
 				    			</div>
 				    			<div class="card-body">
-				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Food You Love</h5>
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Interactive Chat Bot</h5>
 				    			</div>
 				    		</div>
 				    	</div>	
