--- a/Chat-Bot/index.html
+++ b/Chat-Bot/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/botui/build/botui.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/botui/build/botui-theme-default.css" />
+    <link rel="stylesheet" href="css/myBot.css">
   </head>
   <body>
   <div class="container-fluid">
     <div class="row align-items-center no-gutters my-5">
       <div class="col-md-6 offset-md-3 col-12">
-        <h1 class="text-center mb-3">Smartphone Buying Guide</h1>
+        <h1 class="text-center mb-3">Smartphone Buying Assitant</h1>
         <div id="my-botui-app">
           <bot-ui></bot-ui>
         </div>
