Updated Heading for Chat Bot

--- a/Chat-Bot/index.html
+++ b/Chat-Bot/index.html
@@ -14,7 +14,7 @@
   <div class="container-fluid">
     <div class="row align-items-center no-gutters my-5">
       <div class="col-md-6 offset-md-3 col-12">
-        <h1 class="text-center mb-3">Smartphone Buying Assitant</h1>
+        <h1 class="text-center mb-3">Welcome to the Smartphone Buying Assitant.</h1>
         <div id="my-botui-app">
           <bot-ui></bot-ui>
         </div>
