--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -50,25 +50,25 @@
 						<img class="img-fluid" src="images/divider.png">
 						<p class="pt-4 fs30 m-fs-20" id="myMessage">
 							&nbsp;
-						</p>	
+						</p>
 					</div>
 					<div class="col-md-8 offset-md-2 col-12">
 						<p class="lead mt-lg-4 mt-3 mb-5 fs20 m-fs-16 text-center">
 							A self-motivated IT professional with high knowledge and proficiency in JavaScript, HTML , CSS and mobile responsive web development, as well as strong skills and ability in writing clean and efficient code.
 						</p>
 					</div>
-				</div>		
-			</div>	
+				</div>
+			</div>
 		</div>
 	</section>
 	<section id="Projects">
 		<div class="container-fluid">
 			<div class="row bg-Section2 py-5">
 				<div class="col-12 col-md-11 offest-md-1 mx-1600">
-					<div class="text-center header_Section">	
+					<div class="text-center header_Section">
 						<h1 class="m-fs-35 pb-lg-3 pb-1 heading">PROJECTS</h1>
 				    	<img class="img-fluid" src="images/divider.png">
-				    </div>	
+				    </div>
 				    <div class="row pt-lg-5 pt-4 mx-lg-5">
 				    	<div class="col-md-4 col-12">
 				    		<div class="card mb-4 position-relative">
@@ -79,10 +79,10 @@
 					    				<a href="https://rohitkotian27.github.io/Random_Quote_Generator" target="_blank" alias="Random-Quote-Generator" class="btn btn-block">View Now</a>
 					    		</div>
 				    			<div class="card-body">
-				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Random Quote Generator</h5>	
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Random Quote Generator</h5>
 				    			</div>
 				    		</div>
-				    	</div>	
+				    	</div>
 				    	<div class="col-md-4 col-12">
 				    		<div class="card mb-4 position-relative">
 				    			<img src="images/card-2.jpg">
@@ -91,12 +91,12 @@
 					    					I created a To-Do List using HTML and JavaScript. Using this To-Do one can keep a track of tasks that needs to completed.
 					    				</p>
 					    				<a href="https://rohitkotian27.github.io/To-Do-List" target="_blank" alias="To-Do-List" class="btn btn-block">View Now</a>
-					    			</div>	
+					    			</div>
 				    			<div class="card-body">
 				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>To-Do List</h5>
 				    			</div>
 				    		</div>
-				    	</div>	
+				    	</div>
 				    	<div class="col-md-4 col-12">
 				    		<div class="card mb-4 position-relative">
 				    			<img src="images/card-3.jpg">
@@ -104,7 +104,7 @@
 					    				<p class="card-text fs16">
 					    				I learnt the usage of pre-defined classes in Bootstrap and created a Base Template using HTML, CSS, Javascript & Bootstrap 4.</p>
 					    				<a href="https://rohitkotian27.github.io/MyTemplate" target="_blank" alias="MyTemplate" class="btn btn-block">View Now</a>
-					    			</div>	
+					    			</div>
 				    			<div class="card-body">
 				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Website Template</h5>
 				    			</div>
@@ -120,10 +120,10 @@
 					    				<a href="https://rohitkotian27.github.io/Color_Guessing_Game" target="_blank" alias="Color-Guessing-Game/" class="btn btn-block">View Now</a>
 					    			</div>
 				    			<div class="card-body">
-				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Color Guessing Game</h5>	
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Color Guessing Game</h5>
 				    			</div>
 				    		</div>
-				    	</div>	
+				    	</div>
 				    	<div class="col-md-4 col-12">
 				    		<div class="card mb-4 position-relative">
 				    			<img src="images/card-5.jpg">
@@ -134,10 +134,10 @@
 					    				<a href="https://rohitkotian27.github.io/AlarmClockUsingJs" target="_blank" alias="AlarmClockUsingJs" class="btn btn-block">View Now</a>
 					    			</div>
 				    			<div class="card-body">
-				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Alarm Clock</h5>	
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Alarm Clock</h5>
 				    			</div>
 				    		</div>
-				    	</div>	
+				    	</div>
 				    	<div class="col-md-4 col-12">
 				    		<div class="card mb-4 position-relative">
 				    			<img src="images/chat-bot-bg.jpg">
@@ -149,9 +149,9 @@
 				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Interactive Chat Bot</h5>
 				    			</div>
 				    		</div>
-				    	</div>	
+				    	</div>
 				    </div>
-				</div>		
+				</div>
 			</div>
 		</div>
 	</section>
@@ -159,7 +159,7 @@
 		<div class="container-fluid">
 			<div class="row bg-Section1 py-5">
 				<div class="col-12 mx-1600">
-				  <div class="text-center header_Section">	
+				  <div class="text-center header_Section">
 						<h1 class="m-fs-35 pb-lg-2 pb-1 heading">ABOUT</h1>
 				    	<img class="img-fluid" src="images/divider.png">
 				  </div>
@@ -177,7 +177,7 @@
 				  		<p class="m-fs-16">I look forward to life by saying "Hope for the Best, Prepare for the worst."</p>
 				  	</div>
 				  </div>
-				</div>	
+				</div>
 			</div>
 		</div>
 	</section>
@@ -185,7 +185,7 @@
 		<div class="container-fluid">
 			<div class="row bg-Section2 py-5">
 				<div class="col-12 mx-1600">
-					<div class="text-center header_Section">	
+					<div class="text-center header_Section">
 						<h1 class="m-fs-35 pb-lg-2 pb-1 heading">GET IN TOUCH</h1>
 				    	<img class="img-fluid" src="images/divider.png">
 				    </div>
@@ -199,18 +199,16 @@
 				    		<p></p>
 				    	</div>
 				    	<div class="col-md-6 col-12">
-				    		<form class="form-inline" method="POST" action="mailto:rohitkotian07@gmail.com?Customer_details" enctype="multipart/form-data" name="EmailForm">
-				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="30" type="text" name="name" placeholder="Your name" required>
-				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="10" type="number" name="number" placeholder="Mobile number" required>
-				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="30" type="email" name="email" placeholder="Email-id" required>
-				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="30" type="text" name="Organization" placeholder="Organization" required>
-				    			<textarea class="w-100 mb-3 p-2 customText m-fs-16" maxlength="100" type="text" name="message" placeholder="Your message" required></textarea>
+				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="30" type="text" id="yourName" name="name" placeholder="Your name" required>
+				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="10" type="number" id="yourNumber" name="number" placeholder="Mobile number" required>
+				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="30" type="email" id="yourEmail" name="email" placeholder="Email-id" required>
+				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="30" type="text" id="yourOrganization" name="Organization" placeholder="Organization" required>
+				    			<textarea class="w-100 mb-3 p-2 customText m-fs-16" maxlength="100" type="text" id="yourMessage" name="message" placeholder="Your message" required></textarea>
 				    			<div class="w-100 mb-3">
 				    				<input type="checkbox" class="tick" name="checked" id="checked">
 				    				<label class="d-inline m-fs-16">Any message ?</label>
 				    			</div>
-				    			<button type="Submit" value="Submit" class="d-block btn btn-info btn-lg m-fs-16">SEND</button>
-				    		</form>
+				    			<button id="form_Submit" class="d-block btn btn-info btn-lg m-fs-16">SEND</button>
 				    	</div>
 				    </div>
 				</div>
@@ -240,12 +238,12 @@
 							<p class="text-center m-fs-16 px-5 px-lg-0">Please feel free to contact me so that I can help you in implementing your ideas.</p>
 						</div>
 					</div>
-				</div>				
+				</div>
 			</div>
 		</div>
 	</section>
 	<footer class="w-100 footer_bg py-lg-3 py-2">
-		<p class="text-white my-0 fs16">Copyright &copy; 2020. All Rights Reserved.</p>
+		<p class="text-white my-0 fs16">Copyright &copy; 2021. All Rights Reserved.</p>
 	</footer>
 </body>
 </html>
