--- a/Random_Quote_Generator/index.html
+++ b/Random_Quote_Generator/index.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/myScript.js"></script>
     <link rel="stylesheet" type="text/css" href="css/myStyle.css">
 </head>
@@ -28,11 +29,11 @@
             </div>
             <img src="images/Background.png" class="image img-resp d-lg-block d-none" alt="">
             <img src="images/Background_mobile.jpg" class="d-block img-resp d-lg-none" alt="">
-            <div class="position-absolute text-center w-100 mt-5">
+            <div class="position-absolute text-center w-100 mt-md-5">
               <h1 class="display-4 ftcolor mt-5 mb-4 center_text mob_font"><span class="blocker">Welcome to</span> Random <span class="mob_blocker">"Quote"</span> <span class="mob_blocker">Generator</span></h1>
               <div class="center_text">
               <button class="btn custom_btn mt-3 mb-lg-5 mb-1">Get Quote Now!</button>
-              <h3 id="quote" class="mt-4 px-4 mx-lg-5 ftcolor"></h3>
+              <h3 id="quote" class="my-4 px-4 mx-lg-5 ftcolor">&nbsp;</h3>
             </div>
             </div>
           </div>
