--- a/Random_Quote_Generator/index.html
+++ b/Random_Quote_Generator/index.html
@@ -32,8 +32,15 @@
             <div class="position-absolute text-center w-100 mt-md-5">
               <h1 class="display-4 ftcolor mt-5 mb-4 center_text mob_font"><span class="blocker">Welcome to</span> Random <span class="mob_blocker">"Quote"</span> <span class="mob_blocker">Generator</span></h1>
               <div class="center_text">
-              <button class="btn custom_btn mt-3 mb-lg-5 mb-1">Get Quote Now!</button>
-              <h3 id="quote" class="my-4 px-4 mx-lg-5 ftcolor">&nbsp;</h3>
+              <button class="btn custom_btn mb-lg-3 mb-1">Get Quote Now!</button>
+              <h3 id="quote" class="my-md-4 my-3 px-4 mx-lg-5 ftcolor">&nbsp;</h3>
+              <input type="hidden" id="myInput">
+              <div class="add_btns text-center">
+                <h5 class="mb-3">Share with your friends :</h5>
+                <span class="fa fa-clipboard fa-3x px-1" id="myBtn">&nbsp</span>
+                <!-- <span class="fa fa-whatsapp fa-3x px-1" id="myBtn" title="Copied">&nbsp</span>
+                <span class="fa fa-instagram fa-3x px-1" id="myBtn" title="Copied">&nbsp</span> -->
+              </div>
             </div>
             </div>
           </div>
