--- a/instagram-post-creator/index.html
+++ b/instagram-post-creator/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-	<meta name="description" content="A place where you can access multiple inspiring quotes.">
-	<meta name="keywords" content="Motivational Quotes, Inspiring Quotes, Quote Generator">
+	<meta name="description" content="A place where you can create beautiful motivational posts.">
+	<meta name="keywords" content="Motivational Quotes, Inspiring Quotes, Post Creator">
 	<meta name="author" content="Rohit Kotian">
   <title>Instagram Post Creator</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
