--- a/instagram-post-creator/index.html
+++ b/instagram-post-creator/index.html
@@ -28,7 +28,7 @@
             <div class="position-absolute text-center w-100 mt-md-5">
               <h1 class="display-4 ftcolor mt-md-5 mt-4 mb-4 center_text mob_font"><span class="blocker">Welcome to</span> Instagram <span class="mob_blocker">"Post"</span> <span class="mob_blocker">Creator</span></h1>
               <div class="center_text">
-                <div class="post_section position-relative mb-4">
+                <div class="post_section thick_border position-relative mb-4">
                   <img class="w-100 custm_img" alt="">
                   <h5 id="quote" class="ftcolor ft_shadow px-3">&nbsp;</h5>
                 </div>
