--- a/instagram-post-creator/index.html
+++ b/instagram-post-creator/index.html
@@ -8,13 +8,14 @@
 	<meta name="author" content="Rohit Kotian">
   <title>Instagram Post Creator</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.js"></script>
     <script src="js/myScript.js"></script>
     <link rel="stylesheet" type="text/css" href="css/myStyle.css">
 </head>
@@ -28,7 +29,7 @@
             <div class="position-absolute text-center w-100 mt-md-5">
               <h1 class="display-4 ftcolor mt-md-5 mt-4 mb-4 center_text mob_font"><span class="blocker">Welcome to</span> Instagram <span class="mob_blocker">"Post"</span> <span class="mob_blocker">Creator</span></h1>
               <div class="center_text">
-                <div class="post_section thick_border position-relative mb-4">
+                <div class="thick_border position-relative mb-4" id="post_section">
                   <img class="w-100 custm_img" alt="">
                   <h5 id="quote" class="ftcolor ft_shadow px-3">&nbsp;</h5>
                 </div>
@@ -36,8 +37,6 @@
               <div class="add_btns text-center">
                 <h5 class="mb-3">Share with your friends :</h5>
                 <span class="fa fa-download fa-2x px-1" id="myBtn">&nbsp</span>
-                <!-- <span class="fa fa-whatsapp fa-3x px-1" id="myBtn" title="Copied">&nbsp</span>
-                <span class="fa fa-instagram fa-3x px-1" id="myBtn" title="Copied">&nbsp</span> -->
               </div>
             </div>
             </div>
