--- a/instagram-post-creator/index.html
+++ b/instagram-post-creator/index.html
@@ -29,14 +29,15 @@
             <div class="position-absolute text-center w-100 mt-md-5">
               <h1 class="display-4 ftcolor mt-md-5 mt-4 mb-4 center_text mob_font"><span class="blocker">Welcome to</span> Instagram <span class="mob_blocker">"Post"</span> <span class="mob_blocker">Creator</span></h1>
               <div class="center_text">
-                <div class="thick_border position-relative mb-4" id="post_section">
+                <div class="position-relative mb-4" id="post_section">
                   <img class="w-100 custm_img" alt="">
                   <h5 id="quote" class="ftcolor ft_shadow px-3">&nbsp;</h5>
                 </div>
               <button class="btn custom_btn mb-lg-3 mb-3">Create Post!</button>
               <div class="add_btns text-center">
                 <h5 class="mb-3">Share with your friends :</h5>
-                <span class="fa fa-download fa-2x px-1" id="myBtn">&nbsp</span>
+                <span class="fa fa-download fa-2x px-1" id="dwnldBtn">&nbsp</span>
+                <!-- <span class="fa fa-instagram fa-2x px-1" id="instaBtn">&nbsp</span> -->
               </div>
             </div>
             </div>
