--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -170,7 +170,7 @@
 				  	<div class="col-md-6 col-12 h-100">
 				  		<p class="m-fs-16">Computer Engineer by profession and always striving to enhance my career by "Learning Something New Every Single Day".</p>
 
-				  		<p class="m-fs-16">I am currently working at Accenture as a Web Developer. The reason behind choosing Web Development as a field of interest is because User Interface is something that makes everyone's life easy, so building one seems to be interesting and fun. I constantly try to keep myself updated regarding the knowledge I require to work in this field. The skills I have excelled are HTML, CSS, Javascript, Bootstrap, Sass, Python and Jquery. Looking forward to working on some new technologies.</p>
+				  		<p class="m-fs-16">I am currently working at Mastercard as a Software Engineer. The reason behind choosing Web Development as a field of interest is because User Interface is something that makes everyone's life easy, so building one seems to be interesting and fun. I constantly try to keep myself updated regarding the knowledge I require to work in this field. The skills I have excelled are HTML, CSS, Javascript, Bootstrap, Sass, Python and Jquery. Looking forward to working on some new technologies.</p>
 
 				  		<p class="m-fs-16">Apart from that on weekends I spend my time working on furnishing my skills, participating in outdoor activities like Swimming, Cycling and also spending some time with my friends to know about their whereabouts.</p>
 
