--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -88,9 +88,9 @@
 				    			<img src="images/card-2.jpg">
 				    			<div class="card_content position-absolute">
 					    				<p class="card-text fs16">
-					    					I created a To-Do List using HTML and JavaScript. Using this To-Do one can keep a track of tasks that needs to completed.
+					    					I created a To-Do List using React JS. Using this To-Do App one can keep a track of tasks that needs to completed.
 					    				</p>
-					    				<a href="https://rohitkotian27.github.io/To-Do-List" target="_blank" alias="To-Do-List" class="btn btn-block">View Now</a>
+					    				<a href="https://ticktickgo.netlify.app/" target="_blank" alias="To-Do-List" class="btn btn-block">View Now</a>
 					    			</div>
 				    			<div class="card-body">
 				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>To-Do List</h5>
