Update index.html - MovieMate

--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -112,15 +112,15 @@
 				    	</div>
 				    	<div class="col-md-4 col-12">
 				    		<div class="card mb-4 position-relative">
-				    			<img src="images/card-4.jpg">
+				    			<img src="images/movie-mate.jpg">
 				    			<div class="card_content position-absolute">
 					    				<p class="card-text fs16">
-					    					I created a Color Guessing Game using HTML, CSS & JS. Here the user has to guess which color may appear on the Screen.
+					    					A web application that helps you find treding movies that you can look out for.
 					    				</p>
-					    				<a href="https://rohitkotian27.github.io/Color_Guessing_Game" target="_blank" alias="Color-Guessing-Game/" class="btn btn-block">View Now</a>
+					    				<a href="https://yourmoviemate.netlify.app" target="_blank" alias="Movie-mate" class="btn btn-block">View Now</a>
 					    			</div>
 				    			<div class="card-body">
-				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Color Guessing Game</h5>
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Movie Mate</h5>
 				    			</div>
 				    		</div>
 				    	</div>
