--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -115,7 +115,7 @@
 				    			<img src="images/movie-mate.jpg">
 				    			<div class="card_content position-absolute">
 					    				<p class="card-text fs16">
-					    					A web application that helps you find treding movies that you can look out for.
+					    					A web application that helps you find trending movies that you can look out for.
 					    				</p>
 					    				<a href="https://yourmoviemate.netlify.app" target="_blank" alias="Movie-mate" class="btn btn-block">View Now</a>
 					    			</div>
